# CGProjects

./: .gitignore
BRDF/: CMakeLists.txt
BRDF/include/geometry/: bvh.h  matrix3d.h  mesh.h  mesh_transformation.h  point2d.h  point3d.h
BRDF/include/gui/: camera_controls.h  gui.h  raytracer_view.h
BRDF/include/render/: camera.h  color.h  film.h  intersection.h  light.h  material.h  ray.h  raytracer.h  scene.h
BRDF/src/: bvh.cpp  exercise04.cpp  intersection.cpp  main.cpp  mesh.cpp  mesh_shader.cpp  raytracer.cpp
BRDF/src/gui/: camera_controls.cpp  gui.cpp  mesh_view.cpp  raytracer_view.cpp
BVH/: CMakeLists.txt
BVH/ext/: CMakeLists.txt
BVH/include/: aabb.h  bvh.h  camera.h  camera_parameters.h  common.h  film.h  integrator.h  intersection.h  mesh.h  meshcanvas.h  normal_integrator.h  point2d.h  point3d.h  ray.h  raytracer.h  raytracer_view.h  scene.h  triangle.h
BVH/src/: bvh.cpp  exercise03.cpp  intersection.cpp  main.cpp  mesh.cpp  meshcanvas.cpp  normal_integrator.cpp  raytracer.cpp  raytracer_view.cpp
BallCollision/BallCollision/: Ball.h  BallCollision.pri  BallCollision.pro  BallUtils.cpp  BallUtils.h  DrawingUtils.cpp  DrawingUtils.h  VectorUtils.cpp  VectorUtils.h  main.cpp
BallCollision/BallCollisionRunUnitTests/: BallCollisionRunUnitTests.pro
BallCollision/BallCollisionUnitTests/: BallCollisionUnitTests.pri  testBallUtils.cpp  testBallUtils.h  testDrawingUtils.cpp  testDrawingUtils.h  testVectorUtils.cpp  testVectorUtils.h
DFT&IDFT/: CMakeLists.txt
DFT&IDFT/ext/nanogui/include/nanogui/: canvas.h
DFT&IDFT/include/geometry/: point2d.h
DFT&IDFT/include/gui/: gui.h  image_processing_view.h
DFT&IDFT/include/misc/: image_processing.h
DFT&IDFT/include/render/: sampler.h  texture.h
DFT&IDFT/src/: exercise08.cpp  main.cpp  texture.cpp
DFT&IDFT/src/gui/: gui.cpp  image_processing_view.cpp
MonteCarloIntegration/: CMakeLists.txt
MonteCarloIntegration/ext/nanogui/include/nanogui/: layout.h
MonteCarloIntegration/ext/nanogui/src/: popupbutton.cpp  shader_gl.cpp
MonteCarloIntegration/include/geometry/: aabb.h  bvh.h  mesh.h  point2d.h  point3d.h
MonteCarloIntegration/include/gui/: gui.h  mesh_view.h  raytracer_view.h
MonteCarloIntegration/include/render/: camera.h  color.h  film.h  instance.h  intersection.h  light.h  material.h  mesh_shader.h  ray.h  raytracer.h  sampler.h  scene.h
MonteCarloIntegration/src/: bvh.cpp  exercise05.cpp  intersection.cpp  main.cpp  material.cpp  mesh.cpp  mesh_shader.cpp  raytracer.cpp
MonteCarloIntegration/src/gui/: camera_controls.cpp  gui.cpp  mesh_view.cpp  raytracer_view.cpp
OpenGLSettings/: CMakeLists.txt
OpenGLSettings/ext/nanogui/include/nanogui/: vector.h
OpenGLSettings/ext/nanogui/src/: popup.cpp
OpenGLSettings/include/geometry/: bvh.h  frame.h  matrix4d.h  mesh.h  point3d.h
OpenGLSettings/include/gui/: camera_controls.h  gl_view.h  gui.h
OpenGLSettings/include/render/: film.h  gl_shader.h  gl_utils.h  instance.h  intersection.h  material.h  raytracer.h  sampler.h
OpenGLSettings/src/: bvh.cpp  exercise06.cpp  gl_shader.cpp  gl_utils.cpp  intersection.cpp  main.cpp  material.cpp  mesh.cpp  raytracer.cpp
OpenGLSettings/src/gui/: camera_controls.cpp  gl_view.cpp  gui.cpp  raytracer_view.cpp
TextureMapping/: CMakeLists.txt
TextureMapping/ext/: cmake_install.cmake
TextureMapping/ext/nanogui/include/nanogui/: popup.h
TextureMapping/include/common/: constants.h
TextureMapping/include/geometry/: frame.h  matrix3d.h  matrix4d.h  mesh.h
TextureMapping/include/gui/: gl_view.h  gui.h  raytracer_view.h
TextureMapping/include/render/: camera.h  color.h  film.h  gl_shader.h  gl_utils.h  instance.h  light.h  material.h  ray.h  raytracer.h  scene.h  texture.h
TextureMapping/src/: gl_shader.cpp  gl_utils.cpp  intersection.cpp  main.cpp  mesh.cpp  raytracer.cpp  sampler.cpp  texture.cpp
TextureMapping/src/gui/: camera_controls.cpp  gl_view.cpp  raytracer_view.cpp
TextureMapping/src/shaders/: exercise07.frag  exercise07.geom  exercise07.tcs  exercise07.tes  exercise07.vert
meshes/: Axis.blend
